-- Schema und Enum
CREATE SCHEMA IF NOT EXISTS parkhaus;
SET search_path TO parkhaus;

CREATE TYPE kundentyp AS ENUM ('PREMIUM', 'BASIS', 'ANWOHNER');

-- Tabelle parkhaus
-- Hinweis: GENERATED BY DEFAULT erlaubt das Einfügen expliziter IDs aus den Seed-CSVs;
-- die Sequenz wird danach (02-copy-csv.sql) auf >= 1000 gesetzt (Spezifikation START WITH 1000).
CREATE TABLE parkhaus (
    id               integer       GENERATED BY DEFAULT AS IDENTITY (START WITH 1000) PRIMARY KEY,
    version          integer       NOT NULL DEFAULT 0,
    name             text          NOT NULL UNIQUE,
    kapazitaet       integer       NOT NULL CHECK (kapazitaet >= 0),
    tarif_pro_stunde decimal(8, 2) NOT NULL,
    erzeugt          timestamp     NOT NULL DEFAULT NOW(),
    aktualisiert     timestamp     NOT NULL DEFAULT NOW()
);

-- Tabelle adresse (1:1 zu parkhaus)
CREATE TABLE adresse (
    id          integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    plz         text    NOT NULL CHECK (plz ~ '^\d{5}$'),
    ort         text    NOT NULL,
    strasse     text    NOT NULL,
    hausnummer  text    NOT NULL,
    parkhaus_id integer NOT NULL UNIQUE REFERENCES parkhaus (id) ON DELETE CASCADE
);

-- Tabelle auto (n:1 zu parkhaus)
CREATE TABLE auto (
    id            integer   GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    kennzeichen   text      NOT NULL,
    einfahrtszeit timestamp NOT NULL,
    kundentyp     kundentyp NOT NULL,
    parkhaus_id   integer   NOT NULL REFERENCES parkhaus (id) ON DELETE CASCADE
);

CREATE INDEX idx_auto_parkhaus_id ON auto (parkhaus_id);

-- Tabelle parkhaus_file (1:1 zu parkhaus, Binärdatei)
CREATE TABLE parkhaus_file (
    id          integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    data        bytea   NOT NULL,
    filename    text    NOT NULL,
    mimetype    text,
    parkhaus_id integer NOT NULL UNIQUE REFERENCES parkhaus (id) ON DELETE CASCADE
);


